<resources>
    <string name="app_name">OurSolarSystem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Planet name -->
    <string name="dwarf_planets">Dwarf Planets</string>
    <string name="menu_earth">Earth</string>
    <string name="menu_jupiter">Jupiter</string>
    <string name="menu_mars">Mars</string>
    <string name="menu_mercury">Mercury</string>
    <string name="menu_neptune">Neptune</string>
    <string name="menu_saturn">Saturn</string>
    <string name="photo_day">Photo of the day</string>
    <string name="sun">Sun</string>
    <string name="menu_venus">Venus</string>
    <string name="menu_uranus">Uranus</string>
    <!-- Headline -->
    <string name="average_temperature">Average temperature ℃:</string>
    <string name="brief_information">Brief information:</string>
    <string name="count_of_satellites">Count of satellites</string>
    <string name="duration_day">Day length (hrs.min):</string>
    <string name="duration_year">Year length (days/years):</string>
    <string name="interesting_fact">Interesting fact:</string>
    <string name="maximum_temperature">Maximum temperature ℃:</string>
    <string name="minimum_temperature">Minimum temperature ℃:</string>
    <string name="named_after">Named after:</string>
    <string name="person_appearance">A person appearance:</string>
    <string name="rings_of_saturn">Rings of Saturn</string>
    <string name="size_in_earth_diameters">Size in Earth diameters (D♁):</string>
    <string name="solar_system">Solar system</string>
    <string name="solid_surface">Solid surface:</string>
    <string name="surface_gravity">Gravity (g), (1g = 9.81 m/s2):</string>
    <string name="video_of_the_day">Video of the day</string>
    <string name="was_opened">Was opened:</string>
    <!-- Description -->
    <string name="expand">Expand</string>
    <string name="flip">Flip</string>
    <string name="hide_info"><u>Hide info</u></string>
    <string name="image_planet">Image planet</string>
    <string name="leaf">Leaf</string>
    <string name="touch">Touch</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="video">Video</string>
    <!-- Menu -->
    <string name="add_a_photo_in_10_days">Add a photo in 10 days</string>
    <string name="add_a_photo_in_30_days">Add a photo in 30 days</string>
    <string name="add_a_photo_in_90_days">Add a photo in 90 days</string>
    <string name="archive">Archive</string>
    <string name="astronautics">Astronautics</string>
    <string name="clear_the_archive">Clear the archive</string>
    <string name="delete_photo">Delete photo</string>
    <string name="gallery">Gallery</string>
    <string name="information">Information</string>
    <string name="jupiter_satellites">Jupiter satellites</string>
    <string name="mars_rover">Mars rover</string>
    <string name="mars_satellites">Mars satellites</string>
    <string name="moon">Moon</string>
    <string name="neptunus_satellites">Neptunus satellites</string>
    <string name="rings">Rings</string>
    <string name="satellites">Satellites</string>
    <string name="saturn_satellites">Saturn satellites</string>
    <string name="solar_system_scheme">Solar system scheme</string>
    <string name="show_more"><u>Show more</u></string>
    <string name="terraform">Terraform</string>
    <string name="today">Today</string>
    <string name="uranus_satellite">Uranus satellite</string>
    <!-- Check for Internet -->
    <string name="need_internet">To view the photos of the day, you need an Internet connection. But for now you can see the archive photos</string>
    <string name="need_internet_video">To view the video, you need an Internet connection. But for now you can see the archive photos</string>

    <string name="section_development">A section in development</string>
    <string name="chooser_share_image">Share a picture</string>

</resources>