<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_photo_day"
            android:icon="@drawable/ic_photo_day"
            android:title="@string/photo_day" />
        <item
            android:id="@+id/nav_sun"
            android:icon="@drawable/ic_sun"
            android:title="@string/sun" />
        <item
            android:id="@+id/nav_mercury"
            android:icon="@drawable/ic_mercury"
            android:title="@string/menu_mercury" />
        <item
            android:id="@+id/nav_venus"
            android:icon="@drawable/ic_venus"
            android:title="@string/menu_venus" />
        <item
            android:id="@+id/nav_earth"
            android:icon="@drawable/ic_earth"
            android:title="@string/menu_earth" />
        <item
            android:id="@+id/nav_mars"
            android:icon="@drawable/ic_mars"
            android:title="@string/menu_mars" />
        <item
            android:id="@+id/nav_jupiter"
            android:icon="@drawable/ic_jupiter"
            android:title="@string/menu_jupiter" />
        <item
            android:id="@+id/nav_saturn"
            android:icon="@drawable/ic_saturn"
            android:title="@string/menu_saturn" />
        <item
            android:id="@+id/nav_uranus"
            android:icon="@drawable/ic_uranus"
            android:title="@string/menu_uranus" />
        <item
            android:id="@+id/nav_neptune"
            android:icon="@drawable/ic_neptune"
            android:title="@string/menu_neptune" />
    </group>
</menu>