<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/info_menu"
        android:enabled="true"
        android:icon="@drawable/ic_info_24"
        android:title="@string/information" />
    <item
        android:id="@+id/gallery_menu"
        android:enabled="true"
        android:icon="@drawable/ic_telescope_24"
        android:title="@string/gallery" />
    <item
        android:id="@+id/terraform_menu"
        android:enabled="true"
        android:icon="@drawable/ic_terraform_24"
        android:title="@string/terraform" />
    <item
        android:id="@+id/satellites_menu"
        android:enabled="true"
        android:icon="@drawable/ic_satellite_24"
        android:title="@string/satellites" />
    <item
        android:id="@+id/mars_rover_menu"
        android:enabled="true"
        android:icon="@drawable/ic_mars_rover_24"
        android:title="@string/mars_rover" />
</menu>